--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="/Portfolio/AlvinPortfolio.pdf" width="100%" height="745px" />
+<embed src="/AlvinPortfolio.pdf" width="100%" height="745px" />
