--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<embed src="/AlvinPortfolio.pdf" width="100%" height="745px" />
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>AlvinJ's Portfolio</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url= https://alvinjia.github.io/Portfolio/AlvinPortfolio.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
+</html>
